--- a/examples/guides/animation/step-4.html
+++ b/examples/guides/animation/step-4.html
@@ -10,6 +10,10 @@
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
     <!-- Make the map visible -->
     <style>
+        body {
+          margin: 0;
+        }
+
         #map {
             position: absolute;
             height: 100%;
