--- a/examples/guides/aggregations/step-1.html
+++ b/examples/guides/aggregations/step-1.html
@@ -9,13 +9,7 @@
     <!-- Include Mapbox GL CSS -->
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
     <!-- Make the map visible -->
-    <style>
-        #map {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
