--- a/examples/guides/animation/step-1.html
+++ b/examples/guides/animation/step-1.html
@@ -26,6 +26,7 @@
     <!-- Map goes here -->
     <div id="map"></div>
     <script>
+        // Add basemap and set properties
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
@@ -40,19 +41,25 @@
         });
         map.addControl(nav, 'top-left');
 
+        //** CARTO VL functionality begins here **//
+        
         // Autenticate the client
         carto.setDefaultAuth({
             username: 'cartovl',
             apiKey: 'default_public'
         });
-        // Create the source
+
+        // Define source
         const source = new carto.source.Dataset('bird_journey');
-        // Add better styles
+
+        // Define and style Viz object
         const viz = new carto.Viz(`
-            filter: animation($date_time, 30, fade(1,1))
+            filter: animation($date_time, 30, fade(1, 1))
         `);
-        // Create the layer
+ 
+        // Define map layer
         const layer = new carto.Layer('layer', source, viz);
+
         // Add the layer to the map
         layer.addTo(map);
     </script>
