--- a/examples/guides/animation/step-4.html
+++ b/examples/guides/animation/step-4.html
@@ -26,6 +26,7 @@
     <!-- Map goes here -->
     <div id="map"></div>
     <script>
+        // Add basemap and set properties
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
@@ -40,22 +41,27 @@
         });
         map.addControl(nav, 'top-left');
 
+        //** CARTO VL functionality begins here **//
+        
         // Autenticate the client
         carto.setDefaultAuth({
             username: 'cartovl',
             apiKey: 'default_public'
         });
-        // Create the source
+        // Define source
         const source = new carto.source.Dataset('bird_journey');
-        // Add better styles
+
+        // Define and style Viz object
         const viz = new carto.Viz(`
-            filter: animation($date_time,10,fade(0,0.5))
+            filter: animation($date_time, 10,fade(0, 0.5))
             color: ramp(buckets($bird_name,["Sanne","Eric","Nico"]),[deeppink,yellow,turquoise,gray])
             width: 4
             strokeWidth: 0
         `);
-        // Create the layer
+
+        // Define map layer
         const layer = new carto.Layer('layer', source, viz);
+
         // Add the layer to the map
         layer.addTo(map);
     </script>
