--- a/examples/guides/animation/step-5.html
+++ b/examples/guides/animation/step-5.html
@@ -182,7 +182,7 @@
             <h1>Animation controls</h1>
         </header>
         <section>
-            <p>Progress: <input type="range" id="js-progress-range" min="0" max="1" step="0.01"></p>
+            <p>Progress <input type="range" id="js-progress-range" min="0" max="1" step="0.01"></p>
             <p>Duration <input type="range" id="js-duration-range" class="white-thumb" min="0" max="30" step="1"></p>
         </section>
         <section>
