--- a/examples/guides/ramp/accidents-widgets.html
+++ b/examples/guides/ramp/accidents-widgets.html
@@ -33,8 +33,10 @@
             <p class="description open-sans">Change the visualization of the layer</p>
             <div id="widgets">
                 <div>
-                    <label>Viewport damage:</label><div id="widget-viewport-damage">123</div>
-                    <label>Total damage:</label><div id="widget-total-damage">123</div>
+                    <label>Viewport accidents:</label><div id="widget-viewport-accidents"></div>
+                    <label>Total accidents:</label><div id="widget-total-accidents"></div>
+                    <label>Viewport damage:</label><div id="widget-viewport-damage"></div>
+                    <label>Total damage:</label><div id="widget-total-damage"></div>
                 </div>
             </div>
             <footer class="js-footer"></footer>
@@ -63,9 +65,8 @@
 
         const source = new carto.source.Dataset("dot_rail_safety_data ");
         const viz = new carto.Viz(`
-            // width: ramp($total_damage, [0, 50])
-            // strokeWidth: 0.2
-            // color: ramp(top($accident_type, 3), [#3969AC, #F2B701, #E73F74], #A5AA99)
+            // @totalAccidents: globalCount()
+            @viewportAccidents: viewportCount()
             @totalDamage: globalSum($total_damage)
             @viewportDamage: viewportSum($total_damage*clusterCount())
 `);
@@ -75,34 +76,17 @@
 
         layer.on('loaded', () => {
             hideLoader();
-
-            const colorLegend = layer.viz.color.getLegendData();
-            let colorLegendList = '';
-
-            function rgbToHex(color) {
-                return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
-            }
             function hideLoader() {
                 document.getElementById('loader').style.opacity = '0';
             }
-            colorLegend.data.forEach((legend, index) => {
-                const color = legend.value
-                    ? rgbToHex(legend.value)
-                    : 'white'
-
-                if (color) {
-                    colorLegendList +=
-                        `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Rest of types')}</span></li>\n`;
-                }
-            });
-
-            document.getElementById('content').innerHTML = colorLegendList;
         });
 
         layer.on('updated', ()=>{
             // Update widgets
             document.getElementById('widget-total-damage').innerText = `$ ${viz.variables.totalDamage.value/1000000} M`;
             document.getElementById('widget-viewport-damage').innerText = `$ ${viz.variables.viewportDamage.value/1000000} M`;
+            // document.getElementById('widget-total-accidents').innerText = viz.variables.totalAccidents.value;
+            document.getElementById('widget-viewport-accidents').innerText = viz.variables.viewportAccidents.value;
         });
     </script>
 </body>
