WIP in aggregation guide

--- a/examples/guides/aggregations/step-3.html
+++ b/examples/guides/aggregations/step-3.html
@@ -58,17 +58,19 @@
         // GLOBAL AGGREGATIONS + VIEWPORT AGGRS.
         const citiesSource = new carto.source.Dataset('populated_places');
         const citiesViz = new carto.Viz(`
-            color: blend(gray, red, @f_isBiggest)
-            width: blend(10, 40, @f_isBiggest)
+            // color: blend(gray, red, @f_isBiggest)
+            width: blend(60, 40, @f_isBiggest)
             @g_max: globalMax($pop_max)
             @g_avg: globalAvg($pop_max)
             @g_p95: globalPercentile($pop_max, 95)
-            filter: ($pop_max > @g_p95)
+            // filter: ($pop_max > @g_p95)
             // filter: $pop_max == @g_max // biggest city is Tokyo!
             @v_sum: viewportSum($pop_max)
             @v_max: viewportMax($pop_max)
             @v_min: viewportMin($pop_max)
             @f_isBiggest: ($pop_max == @v_max)
+            resolution: 28
+            color: ramp(linear($pop_max, 0, 10000000), tealrose)
         `);
         const citiesLayer = new carto.Layer('cities', citiesSource, citiesViz);
         citiesLayer.addTo(map);
