--- a/examples/guides/ramp/accidents-images.html
+++ b/examples/guides/ramp/accidents-images.html
@@ -51,7 +51,7 @@
             apiKey: 'default_public'
         });
 
-        const source = new carto.source.Dataset("dot_rail_safety_data ");
+        const source = new carto.source.Dataset("railroad_accidents");
         const viz = new carto.Viz(`
             width: 16
             strokeWidth: 0.2
