--- a/examples/guides/ramp/accidents-widgets.html
+++ b/examples/guides/ramp/accidents-widgets.html
@@ -54,7 +54,7 @@
             apiKey: 'default_public'
         });
 
-        const source = new carto.source.Dataset("dot_rail_safety_data ");
+        const source = new carto.source.Dataset("railroad_accidents");
         const viz = new carto.Viz(`
             // @totalAccidents: globalCount()
             @viewportAccidents: viewportCount()
