--- a/examples/guides/animation/step-4.html
+++ b/examples/guides/animation/step-4.html
@@ -43,8 +43,8 @@
 
         // Define and style Viz object
         const viz = new carto.Viz(`
-            filter: animation($date_time, 10,fade(0, 0.5))
-            color: ramp(buckets($bird_name,["Sanne","Eric","Nico"]),[deeppink,yellow,turquoise,gray])
+            filter: animation($date_time, 10, fade(0, 0.5))
+            color: ramp(buckets($bird_name,['Sanne', 'Eric", 'Nico']),[deeppink, yellow, turquoise, gray])
             width: 4
             strokeWidth: 0
         `);
