Add more contents to new Aggregation guide, final draft

--- a/examples/guides/aggregations/step-1.html
+++ b/examples/guides/aggregations/step-1.html
@@ -53,14 +53,15 @@
         citiesLayer.addTo(map);
 
         // Display 3 variables with global aggregation functions
-        citiesLayer.on('loaded', () => {
+        function displayGlobalValues() {
             const v = citiesViz.variables;
             console.log(`
                 Maximum: ${v.g_max.value}
                 Average: ${v.g_avg.value.toFixed(0)}
                 95th percentile: ${v.g_p95.value}
             `);
-        });
+        }
+        citiesLayer.on('loaded', displayGlobalValues);
 
     </script>
 </body>
