Use populated_places dataset

--- a/examples/basics/add-layer.html
+++ b/examples/basics/add-layer.html
@@ -53,7 +53,7 @@
     });
 
     // Define layer
-    const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+    const source = new carto.source.Dataset('populated_places');
     const viz = new carto.Viz();
     const layer = new carto.Layer('layer', source, viz);
 
