--- a/examples/misc/edit-sql-expressions.html
+++ b/examples/misc/edit-sql-expressions.html
@@ -21,7 +21,7 @@
       <div id="controls">
         <div class="control-inner">
           <h3>SQL</h3>
-          <textarea id="sql" rows="3">SELECT * FROM ne_10m_populated_places_simple</textarea>
+          <textarea id="sql" rows="3">SELECT * FROM populated_places</textarea>
           <div class="action-container">
             <button class="button-update" onclick="updateSource()">
               <span>UPDATE SQL</span>
