--- a/examples/styling/image-single.html
+++ b/examples/styling/image-single.html
@@ -55,7 +55,7 @@
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+    const source = new carto.source.Dataset('populated_places');
     const viz = new carto.Viz(`
     symbol: star
     `);
