--- a/examples/guides/interactivity/variables.html
+++ b/examples/guides/interactivity/variables.html
@@ -36,7 +36,7 @@
             apiKey: 'default_public'
         });
 
-        const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+        const source = new carto.source.Dataset('populated_places');
         const viz = new carto.Viz(`
             @name: $name
             width: 15
