--- a/examples/misc/legends/legend-number.html
+++ b/examples/misc/legends/legend-number.html
@@ -53,7 +53,7 @@
     });
 
     // Define the source
-    const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+    const source = new carto.source.Dataset('populated_places');
 
     // Define the visualization
     const viz = new carto.Viz(`
