--- a/examples/styling/image-multiple.html
+++ b/examples/styling/image-multiple.html
@@ -55,7 +55,7 @@
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+    const source = new carto.source.Dataset('populated_places');
     const viz = new carto.Viz(`
       width: ramp(buckets($featurecla, ['Admin-0 capital','Admin-1 capital','Populated place']), [30,20,10])
       color: ramp(buckets($featurecla, ['Admin-0 capital','Admin-1 capital','Populated Place']), [violet,limegreen,gray])
