--- a/examples/styling/image-multiple.html
+++ b/examples/styling/image-multiple.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multiple Images | CARTO</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta charset='UTF-8'>
   <!-- Include CARTO VL JS -->
-  <script src='../../dist/carto-vl.js'></script>
+  <script src="../../dist/carto-vl.js"></script>
   <!-- Include Mapbox GL JS -->
-  <script src='https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js'></script>
+  <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
   <!-- Include Mapbox GL CSS -->
-  <link href='https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css' rel='stylesheet' />
-  <link rel='stylesheet' type='text/css' href='../style.css'>
+  <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -40,9 +40,7 @@
       style: carto.basemaps.voyager,
       center: [0, 30],
       zoom: 3,
-      scrollZoom: false,
-
-
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
