--- a/examples/guides/aggregations/step-2.html
+++ b/examples/guides/aggregations/step-2.html
@@ -57,7 +57,7 @@
 
         // GLOBAL AGGREGATIONS + VIEWPORT AGGRS.
         const citiesSource = new carto.source.Dataset('populated_places');
-        const citiesViz = new carto.Viz(`
+        const viz = new carto.Viz(`
             color: blend(gray, red, @f_isBiggest)
             width: blend(10, 40, @f_isBiggest)
             @g_max: globalMax($pop_max)
@@ -70,41 +70,39 @@
             @v_min: viewportMin($pop_max)
             @f_isBiggest: ($pop_max == @v_max)
         `);
-        const citiesLayer = new carto.Layer('cities', citiesSource, citiesViz);
+        const citiesLayer = new carto.Layer('cities', citiesSource, viz);
         citiesLayer.addTo(map);
 
         // Display 3 variables with global aggregation functions
         function displayGlobalValues() {
-            const v = citiesViz.variables;
             console.log(`
-                Maximum: ${v.g_max.value}
-                Average: ${v.g_avg.value.toFixed(0)}
-                95th percentile: ${v.g_p95.value}
+                Maximum: ${viz.variables.g_max.value}
+                Average: ${viz.variables.g_avg.value.toFixed(0)}
+                95th percentile: ${viz.variables.g_p95.value}
             `);
         }
         citiesLayer.on('loaded', displayGlobalValues);
 
         // Display viewport-derived values
         function displayViewportValues() {
-            const v = citiesViz.variables;
             // In the console
             console.log(`
-                Viewport Sum: ${v.v_sum.value}
-                Viewport Max: ${v.v_max.value}
-                Viewport Min: ${v.v_min.value}
+                Viewport Sum: ${viz.variables.v_sum.value}
+                Viewport Max: ${viz.variables.v_max.value}
+                Viewport Min: ${viz.variables.v_min.value}
             `);
 
             // In the panel
-            const sum = numeral(v.v_sum.value).format('0.0a');
-            const highest = numeral(v.v_max.value).format('0.0a');
-            const lowest = numeral(v.v_min.value).format('0.0a');
+            const sum = numeral(viz.variables.v_sum.value).format('0.0a');
+            const highest = numeral(viz.variables.v_max.value).format('0.0a');
+            const lowest = numeral(viz.variables.v_min.value).format('0.0a');
             const html = `
                 <h2>${sum}</h2>
                 <p>The city with less population in the map has <strong>${lowest}</strong>
                     and the biggest has <strong style='color:red;'>${highest}</strong> people</p>
             `;
             const panelContent = document.querySelector('.js-population');
-            panelContent.innerHTML = v.v_sum.value > 0 ? html : 'There are no cities here!';
+            panelContent.innerHTML = viz.variables.v_sum.value > 0 ? html : 'There are no cities here!';
         }
         citiesLayer.on('updated', displayViewportValues);
 
