--- a/examples/styling/filter.html
+++ b/examples/styling/filter.html
@@ -13,40 +13,39 @@
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
+
+  <!-- Add map container -->
   <div id="map"></div>
+
+  <!-- Add title/legend box -->
   <aside class="toolbox">
     <div class="box">
       <header>
         <h1>Filter based styling</h1>
       </header>
       <section>
-        <p class="description open-sans">Filter data in the browser</p>
+        <p class="description toolbox-text">Filter and style a subset of data</p>
       </section>
-      <footer class="js-footer"></footer>
     </div>
-  </aside>
-  <div id="loader">
-    <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
-      <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
-        <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
-      </svg>
-    </div>
-  </div>
+  
   <script>
+
+    // Add basemap and set properties
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.darkmatter,
       center: [0, 30],
       zoom: 2,
       scrollZoom: false,
-
-
     });
 
+    // Add zoom controls
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
     map.addControl(nav, 'top-left');
+
+    //** CARTO VL functionality begins here **//
 
     // Define user
     carto.setDefaultAuth({
@@ -54,22 +53,24 @@
       apiKey: 'default_public'
     });
 
-    // Define layer
+    // Define source
     const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+
+    // Define Viz object and custom style
     const viz = new carto.Viz(`
         color: ramp(viewportQuantiles($pop_max, 5), redor)
         width: 5
         strokeWidth: 0
-        filter: between($pop_max, 10000, 100000)
+        filter: between($pop_max, 10000, 20000)
     `);
+
+    // Define map layer
     const layer = new carto.Layer('layer', source, viz);
 
+    // Add map layer 
     layer.addTo(map, 'watername_ocean');
-    layer.on('loaded', hideLoader);
 
-    function hideLoader() {
-      document.getElementById('loader').style.opacity = '0';
-    }
   </script>
+  
 </body>
 </html>
