--- a/examples/guides/viz-properties/accessing-viz-properties.html
+++ b/examples/guides/viz-properties/accessing-viz-properties.html
@@ -67,13 +67,13 @@
     layer.addTo(map, 'watername_ocean');
     layer.on('loaded', hideLoader);
 
-    layer.on('updated', ()=>{
+    layer.on('updated', () => {
       const currentColor = viz.color.value;
       document.getElementById('colorDisplay').innerText = JSON.stringify(currentColor, null, 4);
     });
 
     function randomizeColor() {
-      viz.color.blendTo(`rgb(${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() * 255})`);
+      viz.color.blendTo(`rgb(${(Math.random() * 255).toFixed(0)}, ${(Math.random() * 255).toFixed(0)}, ${(Math.random() * 255).toFixed(0)})`);
     }
 
     function hideLoader() {
