--- a/examples/guides/ramp/accidents-category-histogram.html
+++ b/examples/guides/ramp/accidents-category-histogram.html
@@ -24,7 +24,7 @@
             <header>
                 <h1>Accident type</h1>
             </header>
-            <as-category-widget />
+            <as-category-widget disable-interactivity/>
             <footer class="js-footer"></footer>
         </div>
     </aside>
